samples/_failures_safe/1761628697_a0d145_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_991717bc.c: In function ‘main’:
./samples/SAFE/__tmp_991717bc.c:134:16: error: missing terminating " character
  134 |         printf("\nSelect level to view (0=ERROR, 1=WARN, 2=INFO,
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_991717bc.c:134:9: error: expected expression at end of input
  134 |         printf("\nSelect level to view (0=ERROR, 1=WARN, 2=INFO,
      |         ^~~~~~
./samples/SAFE/__tmp_991717bc.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_991717bc.c:134:9: error: expected declaration or statement at end of input
